syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);

	rpc CreateDiscount (CreateDiscountRequest) returns (UpsertCouponModel);

	rpc UpdateDiscount (UpdateDiscountRequest) returns (UpsertCouponModel);
	
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string productName = 1;
}

message CouponModel {
	int32 Id = 1;
	string ProductName = 2;
	string Description = 3;
	int32 Amount = 4;
}

message UpsertCouponModel {
	string ProductName = 1;
	string Description = 2;
	int32 Amount = 3;
}

message CreateDiscountRequest {
	UpsertCouponModel coupon = 1;
}

message UpdateDiscountRequest {
	UpsertCouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}